2011-12-11  Robert Larice
 * src/spicelib/**/*.c :
  auxiliary define `job' --> local variable `job'

2011-12-11  Robert Larice
 * src/spicelib/**/*.c :
  auxiliary define (ANALYSIS*) ckt->CKTcurJob  -->  `job'

2011-12-11  Robert Larice
 * src/spicelib/analysis/cktdisto.c ,
 * src/spicelib/analysis/cktpzld.c ,
 * src/spicelib/analysis/cktsens.c ,
 * src/spicelib/analysis/dctrcurv.c :
  variable rename `sen_info' `cv' `pzan' `sen_info' --> `job'

2011-12-11  Robert Larice
 * src/spicelib/analysis/dcpss.c :
  similiarity dctran.c versus dcpss.c

2011-12-03  Robert Larice
 * src/spicelib/analysis/dcpss.c ,
 * src/spicelib/analysis/dctran.c :
  cleanup, aiming for higher similarity of dctran.c and dcpss.c
  this cleanup was checked for identical object code (gcc on linux)

2011-12-03  Robert Larice
 * src/frontend/numparam/xpressn.c :
  bug fix, parameter assignment was broken for expressions containing one of '<=' '>=' or '!='

2011-12-03  Robert Larice
 * visualc/vngspice.vcproj :
  remove some unused `vcproj' dependencies

2011-11-30  Robert Larice
 * src/frontend/inpcom.c :
  bug fix, parameter processing was broken for nested .subckt

2011-11-27  Holger Vogt
 * /frontend/runcoms2.c: command 'remcirc' to remove a circuit.

2011-11-26  Holger Vogt
 * /frontend/plotting/gnuplot.c: appendwrite and complex
   variable printing added.

2011-11-13  Holger Vogt
 * inp.c: code beautify, indentations etc.
 * inpcom.c: reordering, fcn prototypes added, docu added

2011-11-04  Holger Vogt
 * INSTALL: give more precise instructions

2011-11-03  Robert Larice
 * src/xspice/icm/GNUmakefile.in :
  xspice/icm/GNUmakefile.in, add missing `uninstall' target

2011-10-31  Robert Larice
 * src/main.c ,
 * src/frontend/com_fft.c ,
 * src/frontend/ftesopt.c ,
 * src/frontend/resource.c ,
 * src/frontend/numparam/xpressn.c :
  swallow warnings

2011-10-31  Robert Larice
 * src/spicelib/devices/hisim2/hisim2.h ,
 * src/spicelib/devices/hisim2/hsm2ld.c ,