@@ -45,6 +45,30 @@ void SetAnalyse( char * Analyse, int Percent);
 #endif
 
 
+#define INIT_STATS() \
+do { \
+    startTime = SPfrontEnd->IFseconds();        \
+    startIters = ckt->CKTstat->STATnumIter;     \
+    startdTime = ckt->CKTstat->STATdecompTime;  \
+    startsTime = ckt->CKTstat->STATsolveTime;   \
+    startlTime = ckt->CKTstat->STATloadTime;    \
+    startcTime = ckt->CKTstat->STATcombineTime; \
+    startkTime = ckt->CKTstat->STATsyncTime;    \
+} while(0)
+
+#define UPDATE_STATS(analysis) \
+do { \
+    ckt->CKTcurrentAnalysis = analysis; \
+    ckt->CKTstat->STATtranTime += SPfrontEnd->IFseconds() - startTime; \
+    ckt->CKTstat->STATtranIter += ckt->CKTstat->STATnumIter - startIters; \
+    ckt->CKTstat->STATtranDecompTime += ckt->CKTstat->STATdecompTime - startdTime; \
+    ckt->CKTstat->STATtranSolveTime += ckt->CKTstat->STATsolveTime - startsTime; \
+    ckt->CKTstat->STATtranLoadTime += ckt->CKTstat->STATloadTime - startlTime; \
+    ckt->CKTstat->STATtranCombTime += ckt->CKTstat->STATcombineTime - startcTime; \
+    ckt->CKTstat->STATtranSyncTime += ckt->CKTstat->STATsyncTime - startkTime; \
+} while(0)
+
+
 int
 CKTfour(int, int, double *, double *, double *, double, double *, double *, double *, double *,double *);
 
@@ -317,13 +341,7 @@ DCpss(CKTcircuit *ckt, int restart)
         }
 #endif
 
-        startTime = SPfrontEnd->IFseconds();
-        startIters = ckt->CKTstat->STATnumIter;
-        startdTime = ckt->CKTstat->STATdecompTime;
-        startsTime = ckt->CKTstat->STATsolveTime;
-        startlTime = ckt->CKTstat->STATloadTime;
-        startcTime = ckt->CKTstat->STATcombineTime;
-        startkTime = ckt->CKTstat->STATsyncTime;
+        INIT_STATS();
 #ifdef CLUSTER
         CLUsetup(ckt);
 #endif
@@ -331,13 +349,7 @@ DCpss(CKTcircuit *ckt, int restart)
         /*saj As traninit resets CKTmode */
         ckt->CKTmode = (ckt->CKTmode&MODEUIC)|MODETRAN | MODEINITPRED;
         /* saj */
-        startTime = SPfrontEnd->IFseconds();
-        startIters = ckt->CKTstat->STATnumIter;
-        startdTime = ckt->CKTstat->STATdecompTime;
-        startsTime = ckt->CKTstat->STATsolveTime;
-        startlTime = ckt->CKTstat->STATloadTime;
-        startcTime = ckt->CKTstat->STATcombineTime;
-        startkTime = ckt->CKTstat->STATsyncTime;
+        INIT_STATS();
         if(ckt->CKTminBreak==0) ckt->CKTminBreak=ckt->CKTmaxStep*5e-5;
         firsttime=0;
         /* To get rawfile working saj*/
@@ -406,19 +418,7 @@ nextTime:
     ckt->CKTbreak=0;
     /* XXX Error will cause single process to bail. */
     if(error)  {
-        ckt->CKTcurrentAnalysis = DOING_TRAN;
-        ckt->CKTstat->STATtranTime += SPfrontEnd->IFseconds() - startTime;
-        ckt->CKTstat->STATtranIter += ckt->CKTstat->STATnumIter - startIters;
-        ckt->CKTstat->STATtranDecompTime += ckt->CKTstat->STATdecompTime -
-                                            startdTime;
-        ckt->CKTstat->STATtranSolveTime += ckt->CKTstat->STATsolveTime -
-                                           startsTime;
-        ckt->CKTstat->STATtranLoadTime += ckt->CKTstat->STATloadTime -
-                                          startlTime;
-        ckt->CKTstat->STATtranCombTime += ckt->CKTstat->STATcombineTime -
-                                          startcTime;
-        ckt->CKTstat->STATtranSyncTime += ckt->CKTstat->STATsyncTime -
-                                          startkTime;
+        UPDATE_STATS(DOING_TRAN);
         return(error);
     }
 #ifdef XSPICE
@@ -833,19 +833,7 @@ nextTime:
 
     if( SPfrontEnd->IFpauseTest() ) {
         /* user requested pause... */
-        ckt->CKTcurrentAnalysis = DOING_TRAN;
-        ckt->CKTstat->STATtranTime += SPfrontEnd->IFseconds() - startTime;
-        ckt->CKTstat->STATtranIter += ckt->CKTstat->STATnumIter - startIters;
-        ckt->CKTstat->STATtranDecompTime += ckt->CKTstat->STATdecompTime -
-                                            startdTime;
-        ckt->CKTstat->STATtranSolveTime += ckt->CKTstat->STATsolveTime -
-                                           startsTime;
-        ckt->CKTstat->STATtranLoadTime += ckt->CKTstat->STATloadTime -
-                                          startlTime;
-        ckt->CKTstat->STATtranCombTime += ckt->CKTstat->STATcombineTime -
-                                          startcTime;
-        ckt->CKTstat->STATtranSyncTime += ckt->CKTstat->STATsyncTime -
-                                          startkTime;
+        UPDATE_STATS(DOING_TRAN);
         return(E_PAUSE);
     }
 
@@ -1213,21 +1201,7 @@ resume:
             newdelta = ckt->CKTdelta;
             error = CKTtrunc(ckt,&newdelta);
             if(error) {
-                ckt->CKTcurrentAnalysis = DOING_TRAN;
-                ckt->CKTstat->STATtranTime +=
-                    SPfrontEnd->IFseconds() - startTime;
-                ckt->CKTstat->STATtranIter +=
-                    ckt->CKTstat->STATnumIter - startIters;
-                ckt->CKTstat->STATtranDecompTime += ckt->CKTstat->STATdecompTime
-                                                    - startdTime;
-                ckt->CKTstat->STATtranSolveTime += ckt->CKTstat->STATsolveTime
-                                                   - startsTime;
-                ckt->CKTstat->STATtranLoadTime += ckt->CKTstat->STATloadTime
-                                                  - startlTime;
-                ckt->CKTstat->STATtranCombTime += ckt->CKTstat->STATcombineTime
-                                                  - startcTime;
-                ckt->CKTstat->STATtranSyncTime += ckt->CKTstat->STATsyncTime
-                                                  - startkTime;
+                UPDATE_STATS(DOING_TRAN);
                 return(error);
             }
             if(newdelta>.9 * ckt->CKTdelta) {
@@ -1236,21 +1210,7 @@ resume:
                     ckt->CKTorder = 2;
                     error = CKTtrunc(ckt,&newdelta);
                     if(error) {
-                        ckt->CKTcurrentAnalysis = DOING_TRAN;
-                        ckt->CKTstat->STATtranTime +=
-                            SPfrontEnd->IFseconds() - startTime;
-                        ckt->CKTstat->STATtranIter +=
-                            ckt->CKTstat->STATnumIter - startIters;
-                        ckt->CKTstat->STATtranDecompTime +=
-                            ckt->CKTstat->STATdecompTime - startdTime;
-                        ckt->CKTstat->STATtranSolveTime +=
-                            ckt->CKTstat->STATsolveTime - startsTime;
-                        ckt->CKTstat->STATtranLoadTime +=
-                            ckt->CKTstat->STATloadTime - startlTime;
-                        ckt->CKTstat->STATtranCombTime +=
-                            ckt->CKTstat->STATcombineTime - startcTime;
-                        ckt->CKTstat->STATtranSyncTime +=
-                            ckt->CKTstat->STATsyncTime - startkTime;
+                        UPDATE_STATS(DOING_TRAN);
                         return(error);
                     }
                     if(newdelta <= 1.05 * ckt->CKTdelta) {
@@ -1319,21 +1279,7 @@ resume:
                 (void)printf("delta at delmin\n");
                 /*#endif*/
             } else {
-                ckt->CKTcurrentAnalysis = DOING_TRAN;
-                ckt->CKTstat->STATtranTime +=
-                    SPfrontEnd->IFseconds() - startTime;
-                ckt->CKTstat->STATtranIter +=
-                    ckt->CKTstat->STATnumIter - startIters;
-                ckt->CKTstat->STATtranDecompTime +=
-                    ckt->CKTstat->STATdecompTime - startdTime;
-                ckt->CKTstat->STATtranSolveTime +=
-                    ckt->CKTstat->STATsolveTime - startsTime;
-                ckt->CKTstat->STATtranLoadTime +=
-                    ckt->CKTstat->STATloadTime - startlTime;
-                ckt->CKTstat->STATtranCombTime +=
-                    ckt->CKTstat->STATcombineTime - startcTime;
-                ckt->CKTstat->STATtranSyncTime +=
-                    ckt->CKTstat->STATsyncTime - startkTime;
+                UPDATE_STATS(DOING_TRAN);
                 errMsg = CKTtrouble(ckt, "Timestep too small");
                 return(E_TIMESTEP);
             }
